src/snapshots/monkey_language_server__parser__test__prefix_unhappy_1.snap
---
source: src/parser.rs
description: "-@"
expression: stmts
---
[
    Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,1)->(0,2)),
]
