src/snapshots/monkey_language_server__parser__test__return_happy_2.snap
---
source: src/parser.rs
description: return nil;
expression: stmts
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Nil {
                token: Token(Nil, "nil", (0,7)->(0,10)),
            },
        ),
    },
]
