src/snapshots/monkey_language_server__parser__test__return_happy_3.snap
---
source: src/parser.rs
description: return;
expression: stmts
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: None,
    },
]
