src/snapshots/monkey_language_server__parser__test__return_unhappy_1.snap
---
source: src/parser.rs
description: return @;
expression: stmts
---
[
    Return {
        token: Token(Return, "return", (0,0)->(0,6)),
        value: Some(
            Err(
                Err(UnexpectedToken("SyntaxError: Unexpected '@'."), (0,7)->(0,8)),
            ),
        ),
    },
]
